--- a/jeecg-module-system/jeecg-system-start/src/main/resources/application-dev.yml
+++ b/jeecg-module-system/jeecg-system-start/src/main/resources/application-dev.yml
@@ -158,9 +158,9 @@ spring:
           slow-sql-millis: 5000
       datasource:
         master:
-          url: jdbc:mysql://127.0.0.1:3306/jeecg-boot?characterEncoding=UTF-8&useUnicode=true&useSSL=false&tinyInt1isBit=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai
-          username: root
-          password: root
+          url: jdbc:mysql://192.168.200.60:13307/jeecg-boot?characterEncoding=UTF-8&useUnicode=true&useSSL=false&tinyInt1isBit=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai
+          username: pmy_baiyuetong
+          password: fd3a41ab-3161-9500-1b6f-a3f4551cc830
           driver-class-name: com.mysql.cj.jdbc.Driver
           # 多数据源配置
           #multi-datasource1:
@@ -171,9 +171,9 @@ spring:
   #redis 配置
   redis:
     database: 0
-    host: 127.0.0.1
-    port: 6379
-    password: ''
+    host: 192.168.200.60
+    port: 7479
+    password: '8a296415-386e-6a57-4f77-45a2cf3eafc6'
 #mybatis plus 设置
 mybatis-plus:
   mapper-locations: classpath*:org/jeecg/modules/**/xml/*Mapper.xml
@@ -232,9 +232,9 @@ jeecg:
   file-view-domain: http://fileview.jeecg.com
   # minio文件上传
   minio:
-    minio_url: http://minio.jeecg.com
-    minio_name: ??
-    minio_pass: ??
+    minio_url: http://192.168.8.130:29001
+    minio_name: pmy_baiyuetong
+    minio_pass: 42ebc74e-98f6-c025-831b-7ba3d9d227cb
     bucketName: otatest
   #大屏报表参数设置
   jmreport:
@@ -259,8 +259,8 @@ jeecg:
     logRetentionDays: 30
   #分布式锁配置
   redisson:
-    address: 127.0.0.1:6379
-    password:
+    address: 192.168.200.60:7479
+    password: '8a296415-386e-6a57-4f77-45a2cf3eafc6'
     type: STANDALONE
     enabled: true
   # ai-chat
