--- a/jeecg-module-system/jeecg-system-start/src/main/resources/application.yml
+++ b/jeecg-module-system/jeecg-system-start/src/main/resources/application.yml
@@ -3,3 +3,6 @@ spring:
     name: jeecg-system
   profiles:
     active: '@profile.name@'
+
+minidao :
+  base-package: org.jeecg.modules.jmreport.desreport.dao*
